--- a/src/app/pages/livestream/livestream.page.html
+++ b/src/app/pages/livestream/livestream.page.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="zh-CN">
 <head>
@@ -5,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="profile" href="http://gmpg.org/xfn/11">
   <script>(function(html){html.className = html.className.replace(/\bno-js\b/,'js')})(document.documentElement);</script>
-  <title>Yuwwwwwww &#8211; poltron</title>
+  <title>Parole liberté &#8211; Yuwwwwwww</title>
   <meta name='robots' content='max-image-preview:large' />
   <link rel='dns-prefetch' href='//121.43.225.219' />
   <link rel='dns-prefetch' href='//fonts.googleapis.com' />
@@ -47,9 +48,13 @@
   <![endif]-->
   <script type='text/javascript' src='http://121.43.225.219/wp-includes/js/jquery/jquery.min.js?ver=3.6.0' id='jquery-core-js'></script>
   <script type='text/javascript' src='http://121.43.225.219/wp-includes/js/jquery/jquery-migrate.min.js?ver=3.3.2' id='jquery-migrate-js'></script>
-  <link rel="https://api.w.org/" href="http://121.43.225.219/wp-json/" /><link rel="EditURI" type="application/rsd+xml" title="RSD" href="http://121.43.225.219/xmlrpc.php?rsd" />
+  <link rel="https://api.w.org/" href="http://121.43.225.219/wp-json/" /><link rel="alternate" type="application/json" href="http://121.43.225.219/wp-json/wp/v2/pages/8" /><link rel="EditURI" type="application/rsd+xml" title="RSD" href="http://121.43.225.219/xmlrpc.php?rsd" />
   <link rel="wlwmanifest" type="application/wlwmanifest+xml" href="http://121.43.225.219/wp-includes/wlwmanifest.xml" />
   <meta name="generator" content="WordPress 5.8.2" />
+  <link rel="canonical" href="http://121.43.225.219/test/" />
+  <link rel='shortlink' href='http://121.43.225.219/?p=8' />
+  <link rel="alternate" type="application/json+oembed" href="http://121.43.225.219/wp-json/oembed/1.0/embed?url=http%3A%2F%2F121.43.225.219%2Ftest%2F" />
+  <link rel="alternate" type="text/xml+oembed" href="http://121.43.225.219/wp-json/oembed/1.0/embed?url=http%3A%2F%2F121.43.225.219%2Ftest%2F&#038;format=xml" />
   <style type="text/css" rel="header-image">
     .custom-header .wrapper:before {
       background-image: url( http://121.43.225.219/wp-content/uploads/2021/11/srchttp___p4.itc_.cn_q_70_images03_20210904_db9051d1fa8e4a038201c0e03aa3a2cc.jpegreferhttp___p4.itc_.jpeg);
@@ -76,7 +81,7 @@
   <meta name="msapplication-TileImage" content="http://121.43.225.219/wp-content/uploads/2021/11/cropped-srchttp___www.cctv_.com_history_special_C11298_20031121_images_100695_1945mao.jpgreferhttp___www.cctv_-270x270.jpeg" />
 </head>
 
-<body class="home blog wp-embed-responsive hfeed fluid-layout navigation-default two-columns-layout content-left excerpt color-scheme-default has-header-media absolute-header has-header-image has-header-text">
+<body class="page-template-default page page-id-8 wp-embed-responsive fluid-layout navigation-default two-columns-layout content-left excerpt color-scheme-default has-header-media absolute-header has-header-image has-header-text">
 
 
 <div id="page" class="site">
@@ -89,7 +94,7 @@
         <div class="site-branding">
 
           <div class="site-identity">
-            <h1 class="site-title"><a href="http://121.43.225.219/" rel="home">Yuwwwwwww</a></h1>
+            <p class="site-title"><a href="http://121.43.225.219/" rel="home">Yuwwwwwww</a></p>
             <p class="site-description">poltron</p>
           </div><!-- .site-branding-text-->
         </div><!-- .site-branding -->
@@ -105,16 +110,16 @@
 
             <div class="menu-inside-wrapper">
               <nav id="site-navigation" class="main-navigation default-page-menu" role="navigation" aria-label="Primary Menu">
-                <div class="primary-menu-container"><ul id="menu-primary-items" class="menu nav-menu"><li class="page_item page-item-8"><a href="http://121.43.225.219/test/">Parole liberté</a></li></ul></div>				</nav><!-- .main-navigation -->
+                <div class="primary-menu-container"><ul id="menu-primary-items" class="menu nav-menu"><li class="page_item page-item-8 current_page_item"><a href="http://121.43.225.219/test/" aria-current="page">Parole liberté</a></li></ul></div>				</nav><!-- .main-navigation -->
 
               <div class="mobile-social-search">
                 <div class="search-container">
 
 
                   <form role="search" method="get" class="search-form" action="http://121.43.225.219/">
-                    <label for="search-form-618fd92b442a4">
+                    <label for="search-form-618fffd61c468">
                       <span class="screen-reader-text">Search for:</span>
-                      <input type="search" id="search-form-618fd92b442a4" class="search-field" placeholder="Search" value="" name="s" />
+                      <input type="search" id="search-form-618fffd61c468" class="search-field" placeholder="Search" value="" name="s" />
                     </label>
 
                     <button type="submit" class="search-submit"><svg class="icon icon-search" aria-hidden="true" role="img"> <use href="#icon-search" xlink:href="#icon-search"></use> </svg><span class="screen-reader-text">Search</span></button>
@@ -135,9 +140,9 @@
 
 
                 <form role="search" method="get" class="search-form" action="http://121.43.225.219/">
-                  <label for="search-form-618fd92b44328">
+                  <label for="search-form-618fffd61c938">
                     <span class="screen-reader-text">Search for:</span>
-                    <input type="search" id="search-form-618fd92b44328" class="search-field" placeholder="Search" value="" name="s" />
+                    <input type="search" id="search-form-618fffd61c938" class="search-field" placeholder="Search" value="" name="s" />
                   </label>
 
                   <button type="submit" class="search-submit"><svg class="icon icon-search" aria-hidden="true" role="img"> <use href="#icon-search" xlink:href="#icon-search"></use> </svg><span class="screen-reader-text">Search</span></button>
@@ -154,12 +159,11 @@
   <div class="custom-header header-media">
     <div class="wrapper">
       <div class="custom-header-media">
-        <div id="wp-custom-header" class="wp-custom-header"><img src="http://121.43.225.219/wp-content/uploads/2021/11/srchttp___p4.itc_.cn_q_70_images03_20210904_db9051d1fa8e4a038201c0e03aa3a2cc.jpegreferhttp___p4.itc_.jpeg"/></div>						<div class="custom-header-content sections header-media-section content-align-center text-align-center">
+        <div id="wp-custom-header" class="wp-custom-header"><img src="http://121.43.225.219/wp-content/uploads/2021/11/srchttp___p4.itc_.cn_q_70_images03_20210904_db9051d1fa8e4a038201c0e03aa3a2cc.jpegreferhttp___p4.itc_.jpeg"/></div>						<div class="custom-header-content sections header-media-section ">
         <div class="custom-header-content-wrapper">
-          <div class="section-subtitle">  </div>
 
+          <div class="section-title-wrapper"><h1 class="section-title entry-title">Parole liberté</h1></div>
 
-          <div class="site-header-text"><p></p></div>
         </div><!-- .custom-header-content-wrapper -->
       </div><!-- .custom-header-content -->
 
@@ -172,8 +176,63 @@
     <div class="custom-header-overlay"></div><!-- .custom-header-overlay -->
   </div><!-- .custom-header -->
 
+  <div id="content" class="site-content">
+    <div class="wrapper">
+
+      <div id="primary" class="content-area">
+        <main id="main" class="site-main">
+
+          <article id="post-8" class="post-8 page type-page status-publish hentry">
+
+            <header class="entry-header">
+              <h1 class="entry-title section-title">Parole liberté</h1>	</header><!-- .entry-header -->
+
+            <!-- Page/Post Single Image Disabled or No Image set in Post Thumbnail -->
+            <div class="entry-content">
+
+              <p><script>
+                var send = function(){
+                  content.innerHTML += txt.value + "<br />";
+                  content.scrollTop = content.scrollHeight;
+                }
+              </script></p>
+              <p><input id="txt" type="text" /></p>
+              <p><button><br />
+                Envoyer<br />
+              </button></p>
+              <p style="text-align: right;">Limité à 255 caractères</p>
+              <p><iframe loading="lazy" id="tv_iframe" src="http://liveshare.huya.com/iframe/21650553" width="2000" height="700" scrolling="yes"><span data-mce-type="bookmark" style="display: inline-block; width: 0px; overflow: hidden; line-height: 0;" class="mce_SELRES_start">﻿</span><span data-mce-type="bookmark" style="display: inline-block; width: 0px; overflow: hidden; line-height: 0;" class="mce_SELRES_start">﻿</span></iframe></p>
+              <hr />
+              <p>&nbsp;</p>
+            </div><!-- .entry-content -->
+
+          </article><!-- #post-8 -->
+        </main><!-- #main -->
+      </div><!-- #primary -->
+
+
+      <aside id="secondary" class="widget-area sidebar">
+        <section id="search-2" class="widget widget_search">
+
+          <form role="search" method="get" class="search-form" action="http://121.43.225.219/">
+            <label for="search-form-618fffd61d240">
+              <span class="screen-reader-text">Search for:</span>
+              <input type="search" id="search-form-618fffd61d240" class="search-field" placeholder="Search" value="" name="s" />
+            </label>
+
+            <button type="submit" class="search-submit"><svg class="icon icon-search" aria-hidden="true" role="img"> <use href="#icon-search" xlink:href="#icon-search"></use> </svg><span class="screen-reader-text">Search</span></button>
+          </form>
+        </section></aside><!-- #secondary -->
+
+    </div><!-- .wrapper -->
+  </div><!-- #content -->
+
   <footer id="colophon" class="site-footer">
+
+
+
     <div id="site-generator" class="one">
+
       <div class="site-info">Copyright &copy; 2021 <a href="http://121.43.225.219/">Yuwwwwwww</a> <span class="sep"> | </span>Blakely&nbsp;by&nbsp;<a target="_blank" href="https://catchthemes.com/">Catch Themes</a></div><!-- .site-info -->		</div><!-- #site-generator -->
   </footer><!-- #colophon -->
 
