--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <nav id="site-navigation" role="navigation" aria-label="Primary Menu">
-  <div><ul id="menu-primary-items"><li><a routerLink="/livesteam" routerLinkActive="active">Parole liberté</a></li></ul></div>
+  <div><ul id="menu-primary-items"><li><a routerLink="/livestream" routerLinkActive="active">Parole liberté</a></li></ul></div>
 </nav>
