--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <nav id="site-navigation" role="navigation" aria-label="Primary Menu">
   <div><ul id="menu-primary-items"><li><a routerLink="/livestream" routerLinkActive="active">Parole liberté</a></li></ul></div>
 </nav>
+<button (click)="switchPage()"> Click Me </button>
 <router-outlet></router-outlet>
