--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<router-outlet></router-outlet>
 <div id="page" class="site">
   <a class="skip-link screen-reader-text" href="#content">Skip to content</a>
 
