--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
         <div class="site-branding">
 
           <div class="site-identity">
-            <h1 class="site-title"><a href="http://121.43.225.219/" rel="home">Yuwwwwwww</a></h1>
+            <h1 class="site-title">Yuwwwwwww</h1>
             <p class="site-description">poltron</p>
           </div><!-- .site-branding-text-->
         </div><!-- .site-branding -->
