--- a/src/app/pages/livestream/livestream.page.html
+++ b/src/app/pages/livestream/livestream.page.html
@@ -51,8 +51,8 @@
   <link rel="https://api.w.org/" href="http://121.43.225.219/wp-json/" /><link rel="alternate" type="application/json" href="http://121.43.225.219/wp-json/wp/v2/pages/8" /><link rel="EditURI" type="application/rsd+xml" title="RSD" href="http://121.43.225.219/xmlrpc.php?rsd" />
   <link rel="wlwmanifest" type="application/wlwmanifest+xml" href="http://121.43.225.219/wp-includes/wlwmanifest.xml" />
   <meta name="generator" content="WordPress 5.8.2" />
-  <link rel="canonical" href="http://121.43.225.219/test/" />
-  <link rel='shortlink' href='http://121.43.225.219/?p=8' />
+  <link rel="canonical" />
+  <link rel='shortlink' />
   <link rel="alternate" type="application/json+oembed" href="http://121.43.225.219/wp-json/oembed/1.0/embed?url=http%3A%2F%2F121.43.225.219%2Ftest%2F" />
   <link rel="alternate" type="text/xml+oembed" href="http://121.43.225.219/wp-json/oembed/1.0/embed?url=http%3A%2F%2F121.43.225.219%2Ftest%2F&#038;format=xml" />
   <style type="text/css" rel="header-image">
@@ -110,7 +110,7 @@
 
             <div class="menu-inside-wrapper">
               <nav id="site-navigation" class="main-navigation default-page-menu" role="navigation" aria-label="Primary Menu">
-                <div class="primary-menu-container"><ul id="menu-primary-items" class="menu nav-menu"><li class="page_item page-item-8 current_page_item"><a href="http://121.43.225.219/test/" aria-current="page">Parole liberté</a></li></ul></div>				</nav><!-- .main-navigation -->
+                <div class="primary-menu-container"><ul id="menu-primary-items" class="menu nav-menu"><li class="page_item page-item-8 current_page_item"><a aria-current="page">Parole liberté</a></li></ul></div>				</nav><!-- .main-navigation -->
 
               <div class="mobile-social-search">
                 <div class="search-container">
