--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <router-outlet></router-outlet>
-<div id="page" class="site">
+<div id="page" *ngIf="!hide" class="site">
   <a class="skip-link screen-reader-text" href="#content">Skip to content</a>
 
   <header id="masthead" class="site-header featured-image">
@@ -26,7 +26,7 @@
             <div class="menu-inside-wrapper">
 
               <nav id="site-navigation" class="main-navigation default-page-menu" role="navigation" aria-label="Primary Menu" aria-expanded="false">
-                <div class="primary-menu-container"><ul id="menu-primary-items" class="menu nav-menu"><li class="page_item page-item-8"><a routerLink="/livestream" routerLinkActive="active">Parole liberté</a></li></ul></div>
+                <div class="primary-menu-container"><ul id="menu-primary-items" class="menu nav-menu"><li class="page_item page-item-8"><a (click)="hidePage()" routerLink="/livestream" routerLinkActive="active">Parole liberté</a></li></ul></div>
               </nav>
 
               <div class="mobile-social-search">
