--- a/src/app/pages/livestream/livestream.page.html
+++ b/src/app/pages/livestream/livestream.page.html
@@ -190,17 +190,10 @@
             <!-- Page/Post Single Image Disabled or No Image set in Post Thumbnail -->
             <div class="entry-content">
 
-              <p><script>
-                var send = function(){
-                  content.innerHTML += txt.value + "<br />";
-                  content.scrollTop = content.scrollHeight;
-                }
-              </script></p>
-              <p><input id="txt" type="text" /></p>
+              <p><input id="txt" placeholder="Limité à 255 caractères" type="text" /></p>
               <p><button><br />
                 Envoyer<br />
               </button></p>
-              <p style="text-align: right;">Limité à 255 caractères</p>
               <p><iframe loading="lazy" id="tv_iframe" src="http://liveshare.huya.com/iframe/21650553" width="2000" height="700" scrolling="yes"><span data-mce-type="bookmark" style="display: inline-block; width: 0px; overflow: hidden; line-height: 0;" class="mce_SELRES_start">﻿</span><span data-mce-type="bookmark" style="display: inline-block; width: 0px; overflow: hidden; line-height: 0;" class="mce_SELRES_start">﻿</span></iframe></p>
               <hr />
               <p>&nbsp;</p>
