--- a/src/app/pages/livestream/livestream.page.html
+++ b/src/app/pages/livestream/livestream.page.html
@@ -191,10 +191,8 @@
             <div class="entry-content">
 
               <p><input id="txt" placeholder="Limité à 255 caractères" type="text" /></p>
-              <p><button><br />
-                Envoyer<br />
-              </button></p>
-              <p><iframe #textArea (click)="addToIframe()"></iframe></p>
+              <p><button (click)="addToIframe()"><br />Envoyer<br /></button></p>
+              <p><iframe #textArea></iframe></p>
               <p><iframe loading="lazy" id="tv_iframe" src="http://liveshare.huya.com/iframe/21650553" width="2000" height="700" scrolling="yes"><span data-mce-type="bookmark" style="display: inline-block; width: 0px; overflow: hidden; line-height: 0;" class="mce_SELRES_start">﻿</span><span data-mce-type="bookmark" style="display: inline-block; width: 0px; overflow: hidden; line-height: 0;" class="mce_SELRES_start">﻿</span></iframe></p>
               <hr />
               <p>&nbsp;</p>
