--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -102,7 +102,7 @@
 
   <footer id="colophon" class="site-footer">
     <div id="site-generator" class="one">
-      <div class="site-info">Copyright &copy; 2021 <a href="http://121.43.225.219/">Yuwwwwwww</a> <span class="sep"> | </span>Blakely&nbsp;by&nbsp;<a target="_blank" href="https://catchthemes.com/">Catch Themes</a></div><!-- .site-info -->		</div><!-- #site-generator -->
+      <div class="site-info">Copyright &copy; 2021 <a href="http://121.43.225.219/">Yuwwwwwww</a> <span class="sep"> | </span><a target="_blank" >hongwang6547@gmail.com</a></div><!-- .site-info -->		</div><!-- #site-generator -->
   </footer><!-- #colophon -->
 
 
