--- a/src/app/pages/livestream/livestream.page.html
+++ b/src/app/pages/livestream/livestream.page.html
@@ -42,12 +42,12 @@
       background-color: rgba(0, 0, 0, 0.5 );
     }
   </style>
-  <link rel='stylesheet' id='blakely-block-style-css'  href='http://121.43.225.219/wp-content/themes/blakely/assets/css/blocks.css?ver=1.0' type='text/css' media='all' />
+  <link rel='stylesheet' href='/assets/2.css' type='text/css' />
   <!--[if lt IE 9]>
-  <script type='text/javascript' src='http://121.43.225.219/wp-content/themes/blakely/assets/js/html5.min.js?ver=3.7.3' id='blakely-html5-js'></script>
+  <script type='text/javascript' src='/assets/1.js' id='blakely-html5-js'></script>
   <![endif]-->
-  <script type='text/javascript' src='http://121.43.225.219/wp-includes/js/jquery/jquery.min.js?ver=3.6.0' id='jquery-core-js'></script>
-  <script type='text/javascript' src='http://121.43.225.219/wp-includes/js/jquery/jquery-migrate.min.js?ver=3.3.2' id='jquery-migrate-js'></script>
+  <script type='text/javascript' src='/assets/jquery.min.js' id='jquery-core-js'></script>
+  <script type='text/javascript' src='/assets/jquery-migrate.min.js' id='jquery-migrate-js'></script>
   <link rel="https://api.w.org/" href="http://121.43.225.219/wp-json/" /><link rel="alternate" type="application/json" href="http://121.43.225.219/wp-json/wp/v2/pages/8" /><link rel="EditURI" type="application/rsd+xml" title="RSD" href="http://121.43.225.219/xmlrpc.php?rsd" />
   <link rel="wlwmanifest" type="application/wlwmanifest+xml" href="http://121.43.225.219/wp-includes/wlwmanifest.xml" />
   <meta name="generator" content="WordPress 5.8.2" />
@@ -57,7 +57,7 @@
   <link rel="alternate" type="text/xml+oembed" href="http://121.43.225.219/wp-json/oembed/1.0/embed?url=http%3A%2F%2F121.43.225.219%2Ftest%2F&#038;format=xml" />
   <style type="text/css" rel="header-image">
     .custom-header .wrapper:before {
-      background-image: url( http://121.43.225.219/wp-content/uploads/2021/11/srchttp___p4.itc_.cn_q_70_images03_20210904_db9051d1fa8e4a038201c0e03aa3a2cc.jpegreferhttp___p4.itc_.jpeg);
+      background-image: url(/assets/photos/background.jpeg);
       background-position: center bottom;
       background-repeat: no-repeat;
       background-size: cover;
