--- a/src/app/pages/livestream/livestream.page.html
+++ b/src/app/pages/livestream/livestream.page.html
@@ -42,7 +42,7 @@
       background-color: rgba(0, 0, 0, 0.5 );
     }
   </style>
-  <link rel='stylesheet' href='/assets/2.css' type='text/css' />
+  <link rel='stylesheet' id='blakely-block-style-css' href='/assets/2.css' type='text/css' />
   <!--[if lt IE 9]>
   <script type='text/javascript' src='/assets/1.js' id='blakely-html5-js'></script>
   <![endif]-->
