--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -82,7 +82,7 @@
   <div class="custom-header header-media">
     <div class="wrapper">
       <div class="custom-header-media">
-        <div id="wp-custom-header" class="wp-custom-header"><img src="http://121.43.225.219/wp-content/uploads/2021/11/srchttp___p4.itc_.cn_q_70_images03_20210904_db9051d1fa8e4a038201c0e03aa3a2cc.jpegreferhttp___p4.itc_.jpeg"/></div>						<div class="custom-header-content sections header-media-section content-align-center text-align-center">
+        <div id="wp-custom-header" class="wp-custom-header"><img src="/assets/photos/background.jpeg"/></div>						<div class="custom-header-content sections header-media-section content-align-center text-align-center">
         <div class="custom-header-content-wrapper">
           <div class="section-subtitle">  </div>
 
@@ -102,20 +102,20 @@
 
   <footer id="colophon" class="site-footer">
     <div id="site-generator" class="one">
-      <div class="site-info">Copyright &copy; 2021 <a href="http://121.43.225.219/">Yuwwwwwww</a> <span class="sep"> | </span><a target="_blank" >hongwang6547@gmail.com</a></div><!-- .site-info -->		</div><!-- #site-generator -->
+      <div class="site-info">Copyright &copy; 2021 Yuwwwwwww <span class="sep"> | </span><a target="_blank" >hongwang6547@gmail.com</a></div><!-- .site-info -->		</div><!-- #site-generator -->
   </footer><!-- #colophon -->
 
 
 </div><!-- #page -->
 
-<script type='text/javascript' src='http://121.43.225.219/wp-content/themes/blakely/assets/js/skip-link-focus-fix.min.js?ver=201800703' id='blakely-skip-link-focus-fix-js'></script>
+<script type='text/javascript' src='/assets/skip-link-focus-fix.min.js' id='blakely-skip-link-focus-fix-js'></script>
 <script type='text/javascript' id='blakely-script-js-extra'>
   /* <![CDATA[ */
   var photoFocusOptions = {"screenReaderText":{"expand":"expand child menu","collapse":"collapse child menu","icon":"<svg class=\"icon icon-angle-down\" aria-hidden=\"true\" role=\"img\"> <use href=\"#icon-angle-down\" xlink:href=\"#icon-angle-down\"><\/use> <span class=\"svg-fallback icon-angle-down\"><\/span><\/svg>"},"iconNavPrev":"<svg class=\"icon icon-angle-left\" aria-hidden=\"true\" role=\"img\"> <use href=\"#icon-angle-left\" xlink:href=\"#icon-angle-left\"><\/use> <span class=\"svg-fallback icon-angle-left\"><\/span><\/svg>","iconNavNext":"<svg class=\"icon icon-angle-right\" aria-hidden=\"true\" role=\"img\"> <use href=\"#icon-angle-right\" xlink:href=\"#icon-angle-right\"><\/use> <span class=\"svg-fallback icon-angle-right\"><\/span><\/svg>","rtl":"","dropdownIcon":"<svg class=\"icon icon-angle-down\" aria-hidden=\"true\" role=\"img\"> <use href=\"#icon-angle-down\" xlink:href=\"#icon-angle-down\"><\/use> <span class=\"svg-fallback icon-angle-down\"><\/span><\/svg>"};
   /* ]]> */
 </script>
-<script type='text/javascript' src='http://121.43.225.219/wp-content/themes/blakely/assets/js/functions.min.js?ver=201800703' id='blakely-script-js'></script>
-<script type='text/javascript' src='http://121.43.225.219/wp-includes/js/wp-embed.min.js?ver=5.8.2' id='wp-embed-js'></script>
+<script type='text/javascript' src='/assets/functions.min.js' id='blakely-script-js'></script>
+<script type='text/javascript' src='/assets/wp-embed.min.js' id='wp-embed-js'></script>
 <svg style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <defs>
     <symbol id="icon-behance" viewBox="0 0 37 32">
