--- a/src/app/pages/livestream/livestream.page.html
+++ b/src/app/pages/livestream/livestream.page.html
@@ -13,7 +13,7 @@
         <div class="site-branding">
 
           <div class="site-identity">
-            <p class="site-title"><a href="http://121.43.225.219/" rel="home">Yuwwwwwww</a></p>
+            <p class="site-title"> rel="home">Yuwwwwwww </p>
             <p class="site-description">poltron</p>
           </div><!-- .site-branding-text-->
         </div><!-- .site-branding -->
@@ -78,7 +78,7 @@
   <div class="custom-header header-media">
     <div class="wrapper">
       <div class="custom-header-media">
-        <div id="wp-custom-header" class="wp-custom-header"><img src="http://121.43.225.219/wp-content/uploads/2021/11/srchttp___p4.itc_.cn_q_70_images03_20210904_db9051d1fa8e4a038201c0e03aa3a2cc.jpegreferhttp___p4.itc_.jpeg"/></div>						<div class="custom-header-content sections header-media-section ">
+        <div id="wp-custom-header" class="wp-custom-header"><img src="/assets/photos/background.jpeg"/></div>						<div class="custom-header-content sections header-media-section ">
         <div class="custom-header-content-wrapper">
 
           <div class="section-title-wrapper"><h1 class="section-title entry-title">Parole liberté</h1></div>
