--- a/src/app/pages/livestream/livestream.page.html
+++ b/src/app/pages/livestream/livestream.page.html
@@ -13,7 +13,7 @@
         <div class="site-branding">
 
           <div class="site-identity">
-            <p class="site-title"> rel="home">Yuwwwwwww </p>
+            <p class="site-title"> <a> Yuwwwwwww </a> </p>
             <p class="site-description">poltron</p>
           </div><!-- .site-branding-text-->
         </div><!-- .site-branding -->
