--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
                 <div class="search-container">
 
 
-                  <form role="search" method="get" class="search-form" action="http://121.43.225.219/">
+                  <form role="search" method="get" class="search-form">
                     <label for="search-form-618fd92b442a4">
                       <span class="screen-reader-text">Search for:</span>
                       <input type="search" id="search-form-618fd92b442a4" class="search-field" placeholder="Search" value="" name="s" />
@@ -62,7 +62,7 @@
               <div class="search-container">
 
 
-                <form role="search" method="get" class="search-form" action="http://121.43.225.219/">
+                <form role="search" method="get" class="search-form">
                   <label for="search-form-618fd92b44328">
                     <span class="screen-reader-text">Search for:</span>
                     <input type="search" id="search-form-618fd92b44328" class="search-field" placeholder="Search" value="" name="s" />
