--- a/src/app/pages/livestream/livestream.page.html
+++ b/src/app/pages/livestream/livestream.page.html
@@ -35,7 +35,7 @@
                 <div class="search-container">
 
 
-                  <form role="search" method="get" class="search-form" action="http://121.43.225.219/">
+                  <form role="search" method="get" class="search-form">
                     <label for="search-form-618fffd61c468">
                       <span class="screen-reader-text">Search for:</span>
                       <input type="search" id="search-form-618fffd61c468" class="search-field" placeholder="Search" value="" name="s" />
@@ -58,7 +58,7 @@
               <div class="search-container">
 
 
-                <form role="search" method="get" class="search-form" action="http://121.43.225.219/">
+                <form role="search" method="get" class="search-form">
                   <label for="search-form-618fffd61c938">
                     <span class="screen-reader-text">Search for:</span>
                     <input type="search" id="search-form-618fffd61c938" class="search-field" placeholder="Search" value="" name="s" />
