--- a/src/app/pages/livestream/livestream.page.html
+++ b/src/app/pages/livestream/livestream.page.html
@@ -125,7 +125,7 @@
       <aside id="secondary" class="widget-area sidebar">
         <section id="search-2" class="widget widget_search">
 
-          <form role="search" method="get" class="search-form" action="http://121.43.225.219/">
+          <form role="search" method="get" class="search-form">
             <label for="search-form-618fffd61d240">
               <span class="screen-reader-text">Search for:</span>
               <input type="search" id="search-form-618fffd61d240" class="search-field" placeholder="Search" value="" name="s" />
@@ -144,7 +144,7 @@
 
     <div id="site-generator" class="one">
 
-      <div class="site-info">Copyright &copy; 2021 <a href="http://121.43.225.219/">Yuwwwwwww</a> <span class="sep"> | </span><a target="_blank" href="https://catchthemes.com/">hongwang6547@gmail.com</a></div><!-- .site-info -->		</div><!-- #site-generator -->
+      <div class="site-info">Copyright &copy; 2021 <a>Yuwwwwwww</a> <span class="sep"> | </span><a target="_blank" href="https://catchthemes.com/">hongwang6547@gmail.com</a></div><!-- .site-info -->		</div><!-- #site-generator -->
   </footer><!-- #colophon -->
 
 
