--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -82,7 +82,7 @@
   <div class="custom-header header-media">
     <div class="wrapper">
       <div class="custom-header-media">
-        <div id="wp-custom-header" class="wp-custom-header"><img src="./src/assets/photos/background.jpeg"/></div>						<div class="custom-header-content sections header-media-section content-align-center text-align-center">
+        <div id="wp-custom-header" class="wp-custom-header"><img src="assets/photos/background.jpeg"/></div>						<div class="custom-header-content sections header-media-section content-align-center text-align-center">
         <div class="custom-header-content-wrapper">
           <div class="section-subtitle">  </div>
 
