--- a/src/app/pages/livestream/livestream.page.html
+++ b/src/app/pages/livestream/livestream.page.html
@@ -78,7 +78,7 @@
   <div class="custom-header header-media">
     <div class="wrapper">
       <div class="custom-header-media">
-        <div id="wp-custom-header" class="wp-custom-header"><img src="./src/assets/photos/background.jpeg"/></div>						<div class="custom-header-content sections header-media-section ">
+        <div id="wp-custom-header" class="wp-custom-header"><img src="assets/photos/background.jpeg"/></div>						<div class="custom-header-content sections header-media-section ">
         <div class="custom-header-content-wrapper">
 
           <div class="section-title-wrapper"><h1 class="section-title entry-title">Parole liberté</h1></div>
