--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -92,7 +92,10 @@
       </div><!-- .custom-header-content -->
 
         <div class="scroll-down">
-          <span>Scroll</span>
+          <span>
+            <a (click)="hidePage()" routerLink="/livestream" routerLinkActive="active" id="clickHere">Click Here
+            </a>
+          </span>
           <svg class="icon icon-angle-down" aria-hidden="true" role="img"> <use href="#icon-angle-down" xlink:href="#icon-angle-down"></use> </svg>			</div><!-- .scroll-down -->
 
       </div>
