--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,9 +26,7 @@
 
               <nav id="site-navigation" class="main-navigation default-page-menu" role="navigation" aria-label="Primary Menu" aria-expanded="false">
                 <div class="primary-menu-container"><ul id="menu-primary-items" class="menu nav-menu">
-                  <li class="page_item page-item-8">
-                    <a (click)="hidePage()">Parole liberté </a>
-                  </li>
+                  <li class="page_item page-item-8">Parole liberté</li>
                 </ul>
                 </div>
               </nav>
@@ -91,8 +89,7 @@
 
         <div class="scroll-down">
           <span>
-            <a (click)="headToLiveStream()" id="clickHere">Click Here
-            </a>
+            <a (click)="headToLiveStream()" id="clickHere">Click Here</a>
           </span>
           <svg class="icon icon-angle-down" aria-hidden="true" role="img"> <use href="#icon-angle-down" xlink:href="#icon-angle-down"></use> </svg>			</div><!-- .scroll-down -->
 
