--- a/src/app/pages/livestream/livestream.page.html
+++ b/src/app/pages/livestream/livestream.page.html
@@ -139,7 +139,7 @@
 
     <div id="site-generator" class="one">
 
-      <div class="site-info">Copyright &copy; 2021 <a>Yuwwwwwww</a> <span class="sep"> | </span><a target="_blank" href="https://catchthemes.com/">hongwang6547@gmail.com</a></div><!-- .site-info -->		</div><!-- #site-generator -->
+      <div class="site-info">Copyright &copy; 2021 <a>Yuwwwwwww</a> <span class="sep"> | </span><a target="_blank">hongwang6547@gmail.com</a></div><!-- .site-info -->		</div><!-- #site-generator -->
   </footer><!-- #colophon -->
 
 
