--- a/src/app/pages/workGPT/workGPT.page.html
+++ b/src/app/pages/workGPT/workGPT.page.html
@@ -32,6 +32,14 @@
       <ion-row class="chat-area">
       </ion-row>
       <ion-row class="input-area">
+        <ion-item lines="none">
+          <ion-input #userInput placeholder="Send a message."></ion-input>
+          <ion-button fill="clear" size="large"
+                      [disabled]="userInput.value === ''"
+                      (click)="getUerInputText(userInput.value); userInput.value = ''">
+            <ion-icon slot="end" name="arrow-forward-outline"></ion-icon>
+          </ion-button>
+        </ion-item>
       </ion-row>
     </ion-grid>
   </div>
